@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1 2014/07/19 09:01:23 ryoon Exp $
+$NetBSD: distinfo,v 1.1 2014/09/05 14:51:39 joerg Exp $
 
 SHA1 (ninja-1.5.1.tar.gz) = c5a3af39f6d7ee3a30263f34091c046964d442f0
 RMD160 (ninja-1.5.1.tar.gz) = c2bbb37038925a34f0f62bab4893441290b26783
